[gd_scene load_steps=22 format=2]

[ext_resource path="res://reused_util/buttonpress.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menus/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://reused_util/KeyChangeEntry.tscn" type="PackedScene" id=3]
[ext_resource path="res://SoundEffects/VolumeCheck.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Menus/UI_Theme.tres" type="Theme" id=5]
[ext_resource path="res://Fonts/Fredoka/Fredoka-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=15]
size = 42
font_data = ExtResource( 6 )

[sub_resource type="Image" id=16]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 13, 0, 28, 0, 39, 0, 39, 0, 28, 0, 13, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 22, 102, 110, 137, 193, 152, 239, 152, 239, 137, 193, 102, 110, 0, 22, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 13, 102, 110, 146, 232, 142, 255, 135, 255, 135, 255, 142, 255, 146, 232, 102, 110, 0, 13, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 28, 137, 193, 142, 255, 132, 255, 131, 255, 131, 255, 132, 255, 142, 255, 137, 193, 0, 28, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 39, 152, 239, 135, 255, 131, 255, 131, 255, 131, 255, 131, 255, 135, 255, 152, 239, 0, 39, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 40, 150, 240, 135, 255, 131, 255, 131, 255, 131, 255, 131, 255, 135, 255, 149, 240, 0, 40, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 34, 143, 219, 138, 255, 131, 255, 131, 255, 131, 255, 131, 255, 136, 255, 142, 222, 0, 36, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 23, 129, 175, 143, 255, 131, 255, 131, 255, 131, 255, 131, 255, 141, 255, 141, 197, 0, 26, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 10, 82, 101, 150, 252, 133, 255, 131, 255, 131, 255, 133, 255, 150, 254, 77, 100, 0, 12, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 33, 49, 143, 224, 137, 255, 131, 255, 131, 255, 137, 255, 145, 224, 4, 40, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 20, 120, 156, 147, 255, 133, 255, 133, 255, 147, 255, 116, 149, 0, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 5, 12, 44, 144, 219, 140, 255, 140, 255, 145, 220, 12, 44, 0, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 11, 56, 79, 156, 244, 156, 247, 64, 85, 0, 12, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 20, 114, 115, 122, 125, 0, 22, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 11, 0, 12, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 16 )
size = Vector2( 32, 32 )

[sub_resource type="Image" id=17]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 13, 0, 28, 0, 39, 0, 39, 0, 28, 0, 13, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 22, 51, 110, 69, 193, 76, 239, 76, 239, 69, 193, 51, 110, 0, 22, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 13, 51, 110, 73, 232, 71, 255, 68, 255, 68, 255, 71, 255, 73, 232, 51, 110, 0, 13, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 28, 69, 193, 71, 255, 66, 255, 66, 255, 66, 255, 66, 255, 71, 255, 69, 193, 0, 28, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 39, 76, 239, 68, 255, 66, 255, 66, 255, 66, 255, 66, 255, 68, 255, 76, 239, 0, 39, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 40, 75, 240, 68, 255, 66, 255, 66, 255, 66, 255, 66, 255, 68, 255, 75, 240, 0, 40, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 34, 72, 219, 69, 255, 66, 255, 66, 255, 66, 255, 66, 255, 68, 255, 71, 222, 0, 36, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 23, 65, 175, 72, 255, 66, 255, 66, 255, 66, 255, 66, 255, 71, 255, 71, 197, 0, 26, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 10, 41, 101, 75, 252, 67, 255, 66, 255, 66, 255, 67, 255, 75, 254, 39, 100, 0, 12, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 17, 49, 72, 224, 69, 255, 66, 255, 66, 255, 69, 255, 73, 224, 2, 40, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 20, 60, 156, 74, 255, 67, 255, 67, 255, 74, 255, 58, 149, 0, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 5, 6, 44, 72, 219, 70, 255, 70, 255, 73, 220, 6, 44, 0, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 11, 28, 79, 78, 244, 78, 247, 32, 85, 0, 12, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 20, 57, 115, 61, 125, 0, 22, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 11, 0, 12, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=4]
flags = 4
flags = 4
image = SubResource( 17 )
size = Vector2( 32, 32 )

[sub_resource type="Image" id=18]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 13, 0, 0, 0, 28, 0, 0, 0, 39, 0, 0, 0, 39, 0, 0, 0, 28, 0, 0, 0, 13, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 22, 72, 131, 131, 110, 96, 175, 177, 193, 101, 187, 202, 239, 101, 187, 202, 239, 96, 175, 177, 193, 72, 131, 131, 110, 0, 0, 0, 22, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 13, 72, 131, 131, 110, 97, 179, 194, 232, 84, 162, 200, 255, 76, 148, 194, 255, 76, 148, 194, 255, 84, 162, 200, 255, 97, 179, 194, 232, 72, 131, 131, 110, 0, 0, 0, 13, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 28, 96, 175, 177, 193, 84, 162, 200, 255, 72, 142, 192, 255, 71, 140, 191, 255, 71, 140, 191, 255, 72, 142, 192, 255, 84, 162, 200, 255, 96, 175, 177, 193, 0, 0, 0, 28, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 39, 101, 187, 202, 239, 76, 148, 194, 255, 71, 140, 191, 255, 71, 140, 191, 255, 71, 140, 191, 255, 71, 140, 191, 255, 76, 148, 194, 255, 101, 187, 202, 239, 0, 0, 0, 39, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 40, 99, 183, 200, 240, 75, 147, 194, 255, 71, 140, 191, 255, 71, 140, 191, 255, 71, 140, 191, 255, 71, 140, 191, 255, 75, 146, 194, 255, 99, 183, 199, 240, 0, 0, 0, 40, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 34, 97, 179, 188, 219, 79, 152, 196, 255, 71, 140, 191, 255, 71, 140, 191, 255, 71, 140, 191, 255, 71, 140, 191, 255, 77, 150, 195, 255, 96, 177, 188, 222, 0, 0, 0, 36, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 23, 91, 166, 165, 175, 85, 163, 200, 255, 71, 140, 191, 255, 71, 140, 191, 255, 71, 140, 191, 255, 71, 140, 191, 255, 83, 159, 199, 255, 99, 180, 182, 197, 0, 0, 0, 26, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 10, 58, 105, 105, 101, 94, 177, 205, 252, 73, 143, 192, 255, 71, 140, 191, 255, 71, 140, 191, 255, 73, 143, 192, 255, 94, 176, 205, 254, 54, 99, 99, 100, 0, 0, 0, 12, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 23, 42, 41, 49, 96, 178, 189, 224, 78, 151, 196, 255, 71, 140, 191, 255, 71, 140, 191, 255, 78, 151, 196, 255, 98, 179, 191, 224, 3, 5, 5, 40, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 20, 85, 155, 154, 156, 90, 171, 203, 255, 73, 143, 192, 255, 73, 143, 192, 255, 90, 172, 204, 255, 82, 150, 149, 149, 0, 0, 0, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 5, 8, 15, 15, 44, 98, 180, 189, 219, 82, 158, 198, 255, 81, 157, 198, 255, 99, 183, 191, 220, 8, 15, 15, 44, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 11, 39, 72, 71, 79, 104, 192, 207, 244, 104, 193, 207, 247, 45, 82, 82, 85, 0, 0, 0, 12, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 20, 81, 147, 146, 115, 86, 157, 156, 125, 0, 0, 0, 22, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 11, 0, 0, 0, 12, 0, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=6]
flags = 4
flags = 4
image = SubResource( 18 )
size = Vector2( 32, 32 )

[sub_resource type="Image" id=19]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 152, 152, 152, 121, 78, 78, 78, 49, 0, 0, 0, 0, 0, 0, 0, 0, 141, 141, 141, 121, 78, 78, 78, 49, 0, 0, 0, 0, 0, 0, 0, 0, 130, 130, 130, 121, 78, 78, 78, 49, 0, 0, 0, 0, 0, 0, 0, 0, 78, 78, 78, 49, 78, 78, 78, 28, 0, 0, 0, 0, 0, 0, 0, 0, 56, 85, 95, 0, 56, 85, 95, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 140, 172, 184, 0, 56, 85, 95, 0, 0, 0, 0, 0, 0, 0, 0, 0, 129, 162, 173, 0, 56, 85, 95, 0, 0, 0, 0, 0, 0, 0, 0, 0, 152, 152, 152, 121, 78, 78, 78, 49, 0, 0, 0, 0, 0, 0, 0, 0, 141, 141, 141, 121, 78, 78, 78, 49, 0, 0, 0, 0, 0, 0, 0, 0, 130, 130, 130, 121, 78, 78, 78, 49, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 4
}

[sub_resource type="ImageTexture" id=8]
flags = 4
flags = 4
image = SubResource( 19 )
size = Vector2( 8, 32 )

[sub_resource type="Image" id=20]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 0, 0, 0, 0, 77, 75, 89, 0, 77, 75, 89, 4, 77, 75, 89, 25, 77, 75, 89, 64, 77, 75, 89, 93, 77, 75, 89, 102, 77, 75, 89, 104, 77, 75, 89, 104, 77, 75, 89, 104, 77, 75, 89, 104, 77, 75, 89, 102, 77, 75, 89, 93, 77, 75, 89, 64, 77, 75, 89, 25, 77, 75, 89, 4, 77, 75, 89, 0, 77, 75, 89, 4, 77, 75, 89, 40, 64, 62, 74, 147, 42, 41, 47, 240, 32, 32, 36, 252, 30, 30, 35, 255, 31, 31, 35, 255, 31, 31, 35, 255, 31, 31, 35, 255, 31, 31, 35, 255, 30, 30, 35, 255, 32, 32, 36, 252, 42, 41, 47, 240, 64, 62, 74, 147, 77, 75, 89, 40, 77, 75, 89, 4, 77, 75, 89, 25, 63, 62, 73, 148, 31, 31, 36, 252, 32, 32, 37, 255, 34, 34, 39, 255, 35, 35, 39, 255, 35, 35, 40, 255, 35, 35, 40, 255, 35, 35, 40, 255, 35, 35, 40, 255, 35, 35, 39, 255, 34, 34, 39, 255, 32, 32, 37, 255, 31, 31, 36, 252, 63, 62, 73, 148, 77, 75, 89, 25, 77, 75, 89, 64, 42, 41, 47, 240, 32, 32, 37, 255, 35, 35, 40, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 35, 35, 40, 255, 32, 32, 37, 255, 42, 41, 47, 240, 77, 75, 89, 64, 77, 75, 89, 93, 32, 32, 36, 253, 34, 34, 39, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 34, 34, 39, 255, 32, 32, 36, 253, 77, 75, 89, 93, 77, 75, 89, 93, 32, 32, 36, 253, 34, 34, 39, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 34, 34, 39, 255, 32, 32, 36, 253, 77, 75, 89, 93, 77, 75, 89, 64, 42, 41, 47, 240, 32, 32, 37, 255, 35, 35, 40, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 35, 35, 40, 255, 32, 32, 37, 255, 42, 41, 47, 240, 77, 75, 89, 64, 77, 75, 89, 26, 63, 62, 73, 150, 31, 31, 36, 252, 32, 32, 37, 255, 34, 34, 39, 255, 35, 35, 39, 255, 35, 35, 40, 255, 35, 35, 40, 255, 35, 35, 40, 255, 35, 35, 40, 255, 35, 35, 39, 255, 34, 34, 39, 255, 32, 32, 37, 255, 31, 31, 36, 252, 63, 62, 73, 150, 77, 75, 89, 26, 77, 75, 89, 4, 77, 75, 89, 40, 63, 62, 73, 149, 42, 41, 47, 240, 32, 32, 36, 253, 30, 30, 35, 255, 31, 31, 35, 255, 31, 31, 35, 255, 31, 31, 35, 255, 31, 31, 35, 255, 30, 30, 35, 255, 32, 32, 36, 253, 42, 41, 47, 240, 63, 62, 73, 149, 77, 75, 89, 40, 77, 75, 89, 4, 77, 75, 89, 0, 77, 75, 89, 4, 77, 75, 89, 25, 77, 75, 89, 64, 77, 75, 89, 93, 77, 75, 89, 102, 77, 75, 89, 104, 77, 75, 89, 104, 77, 75, 89, 104, 77, 75, 89, 104, 77, 75, 89, 102, 77, 75, 89, 93, 77, 75, 89, 64, 77, 75, 89, 25, 77, 75, 89, 4, 77, 75, 89, 0, 0, 0, 0, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 77, 75, 89, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=10]
flags = 4
flags = 4
image = SubResource( 20 )
size = Vector2( 16, 16 )

[sub_resource type="StyleBoxTexture" id=11]
texture = SubResource( 10 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id=12]
texture = SubResource( 10 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id=13]
texture = SubResource( 10 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="Theme" id=14]
HSlider/icons/grabber = SubResource( 2 )
HSlider/icons/grabber_disabled = SubResource( 4 )
HSlider/icons/grabber_highlight = SubResource( 6 )
HSlider/icons/tick = SubResource( 8 )
HSlider/styles/grabber_area = SubResource( 11 )
HSlider/styles/grabber_area_highlight = SubResource( 12 )
HSlider/styles/slider = SubResource( 13 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )

[node name="Blip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="CenterBox" type="CenterContainer" parent="."]
margin_right = 640.0
margin_bottom = 720.0

[node name="VBox" type="VBoxContainer" parent="CenterBox"]
margin_left = 128.0
margin_top = 64.0
margin_right = 512.0
margin_bottom = 656.0
rect_min_size = Vector2( 384, 0 )
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterBox/VBox"]
margin_right = 384.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 15 )
text = "- Game Volume +"
align = 1

[node name="HSlider" type="HSlider" parent="CenterBox/VBox"]
margin_top = 61.0
margin_right = 384.0
margin_bottom = 109.0
rect_min_size = Vector2( 0, 48 )
theme = SubResource( 14 )
min_value = -30.0
max_value = 30.0
scrollable = false

[node name="Label3" type="Label" parent="CenterBox/VBox"]
visible = false
margin_top = 119.0
margin_right = 384.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 15 )
text = "- Game Difficulty +"
align = 1

[node name="Difficulty" type="HSlider" parent="CenterBox/VBox"]
visible = false
margin_top = 119.0
margin_right = 384.0
margin_bottom = 167.0
rect_min_size = Vector2( 0, 48 )
theme = SubResource( 14 )
max_value = 3.0
step = 0.5
value = 1.0
scrollable = false

[node name="HSeparator" type="HSeparator" parent="CenterBox/VBox"]
margin_top = 119.0
margin_right = 384.0
margin_bottom = 123.0

[node name="Label2" type="Label" parent="CenterBox/VBox"]
margin_top = 133.0
margin_right = 384.0
margin_bottom = 184.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 15 )
text = "Keybinds"
align = 1

[node name="KeyChangeEntry" parent="CenterBox/VBox" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 194.0
margin_right = 384.0
margin_bottom = 240.0
ACTION = "move_left"
LABEL = "Move Left"

[node name="KeyChangeEntry2" parent="CenterBox/VBox" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 250.0
margin_right = 384.0
margin_bottom = 296.0
ACTION = "move_right"
LABEL = "Move Right"

[node name="KeyChangeEntry6" parent="CenterBox/VBox" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 306.0
margin_right = 384.0
margin_bottom = 352.0
ACTION = "move_down"
LABEL = "Move Down"

[node name="KeyChangeEntry3" parent="CenterBox/VBox" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 362.0
margin_right = 384.0
margin_bottom = 408.0
ACTION = "rotate_left"
LABEL = "Rotate Left"

[node name="KeyChangeEntry4" parent="CenterBox/VBox" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 418.0
margin_right = 384.0
margin_bottom = 464.0
ACTION = "rotate_right"
LABEL = "Rotate Right"

[node name="KeyChangeEntry5" parent="CenterBox/VBox" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 474.0
margin_right = 384.0
margin_bottom = 520.0
ACTION = "next_piece"
LABEL = "Place"

[node name="HSeparator2" type="HSeparator" parent="CenterBox/VBox"]
margin_top = 530.0
margin_right = 384.0
margin_bottom = 534.0

[node name="Back" type="Button" parent="CenterBox/VBox"]
margin_top = 544.0
margin_right = 384.0
margin_bottom = 592.0
rect_min_size = Vector2( 0, 48 )
hint_tooltip = "Save settings and return to main menu"
text = "Back"
script = ExtResource( 1 )
button_name = "Back"
load_scene = "res://Scenes/Menus/MainMenu.tscn"

[connection signal="value_changed" from="CenterBox/VBox/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="CenterBox/VBox/Difficulty" to="." method="_on_Difficulty_value_changed"]
